# featherkit-showcase

./: .gitignore  CMakeLists.txt  README.md  emccify.sh
ants/: CMakeLists.txt  kim.vim
ants/src/: ant.cpp  ant.h  antapplication.cpp  antapplication.h  antapplication.hpp  antmanager.cpp  antmanager.h  antmanager.hpp  antsprite.h  antsprite.hpp  anttype.h  anttype.hpp  buttontype.h  buttontype.hpp  cloudhandler.cpp  cloudhandler.h  collisionpoint.cpp  collisionpoint.h  digging.cpp  digging.h  digging.hpp  direction.hpp  featurebutton.cpp  featurebutton.h  featurebutton.hpp  gui.cpp  gui.h  gui.hpp  imageloader.cpp  imageloader.h  inputhandler.cpp  inputhandler.h  inputhandler.hpp  interpolator.cpp  interpolator.h  lightingquadtype.h  lodepng.cpp  main.cpp  messages.h  messages.hpp  (+17 more)
rain/: CMakeLists.txt
rain/src/: imageloader.h  interpolator.cpp  main.cpp  rainhandler.cpp
